# text_imp

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/: lib.rs
text_imp/: __init__.py  attachments.py  contacts.py
