[package]
name = "impy"
version = "0.1.0"
edition = "2021"

[lib]
name = "impy"
crate-type = ["cdylib"]

[dependencies]
imessage-database = "2.3.0"
polars = { version = "0.36.2", features = ["dtype-datetime", "dtype-date", "dtype-time", "dtype-duration"] }
serde_json = "1.0.138"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.39"
pyo3 = { version = "0.20.3", features = ["extension-module"] }
pyo3-polars = "0.10.0"
