[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "text-imp"
version = "0.1.0"
description = "Python bindings for iMessage and Contacts database access"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "text_imp._core"
python-source = "text_imp"
manifest-path = "Cargo.toml" 